# llm_writer

./: .gitignore  AGENTS.md  MCP_SERVERS.md  MCP_SERVERS_review_list.md  MODELS.md  README.md  codex.toml  config.yaml  exportdotenv  prompts.yaml  pyproject.toml  requirements.txt  srw  srw_llm_tool.py
codex/: CODEBASE_REVIEW_SUMMARY.md
codex/TASKS/: 01_bootstrap_project_and_cli.yaml  02_implement_config_models_and_loader.yaml  03_implement_model_registry_and_litellm_integration.yaml  04_define_task_spec_and_loader.yaml  05_implement_prompt_builders.yaml  06_implement_mcp_types_and_normalization.yaml  07_implement_automated_task_runner.yaml  08_implement_planning_log_writer.yaml  09_implement_planning_repl.yaml  10_implement_replay_support.yaml  11_implement_mcp_prompt_policy_modes.yaml  12_add_textual_source_browser_stub.yaml  13_per_model_default_system_prompts_and_llm_tool_definition_prompt_plus_model_equals_tool_spec.yaml  14_implement_manual_context_window_memory_system.yaml  15_fix_planning_mode_silent_failures.yaml  16_implement_outline_context_support.yaml  (+9 more)
docs/: mcp_resilience.md
tests/: __init__.py  conftest.py  test_cli_parser.py  test_config_loader.py  test_llm_registry.py  test_manual_memory_store.py  test_mcp_client.py  test_mcp_llm_tool.py  test_mcp_message_formatting.py  test_mcp_normalization.py  test_mcp_prompt_policy.py  test_planning_log_writer.py  test_planning_repl.py  test_prompt_building.py  test_prompt_library.py  test_replay_reconstruct.py  test_runner_run_tasks.py  test_source_browser_stub.py  test_task_loading.py  test_url_fetcher.py
(+45 files in other folders)
